--- a/index.html
+++ b/index.html
@@ -57,32 +57,39 @@
 </head>
 <body>
     <div class="card">
-        <iframe src="PA Unit I - Data Mining.pdf#view=FitH"></iframe>
+        <iframe src="Unit 2 Data Visualization.pdf#view=FitH"></iframe>
     </div>
     <div class="button-container">
-        <a href="PA Unit I - Data Mining.pdf" target="_blank">View Full Screen</a>
-        <a href="PA Unit I - Data Mining.pdf" download="PDF_FILE.pdf">Download PDF</a>
+        <a href="Unit 2 Data Visualization.pdff" target="_blank">View Full Screen</a>
+        <a href="Unit 2 Data Visualization.pdf" download="PDF_FILE.pdf">Download PDF</a>
     </div>
     <div class="card">
-        <iframe src="PA UNIT 1_240906_092422 (1).pdf#view=FitH"></iframe>
+        <iframe src="Unit-2_240906_092518.pdf#view=FitH"></iframe>
     </div>
     <div class="button-container">
-        <a href="PA UNIT 1_240906_092422 (1).pdf" target="_blank">View Full Screen</a>
-        <a href="PA UNIT 1_240906_092422 (1).pdf" download="PDF_FILE.pdf">Download PDF</a>
+        <a href="Unit-2_240906_092518.pdf" target="_blank">View Full Screen</a>
+        <a href="Unit-2_240906_092518.pdf" download="PDF_FILE.pdf">Download PDF</a>
     </div>
     <div class="card">
-        <iframe src="Data discretization in data mining.pdf#view=FitH"></iframe>
+        <iframe src="Unit II Distribution and Summary Statistics.pdf#view=FitH"></iframe>
     </div>
     <div class="button-container">
-        <a href="Data discretization in data mining.pdf" target="_blank">View Full Screen</a>
-        <a href="Data discretization in data mining.pdf" download="PDF_FILE.pdf">Download PDF</a>
+        <a href="Unit II Distribution and Summary Statistics.pdf" target="_blank">View Full Screen</a>
+        <a href="Unit II Distribution and Summary Statistics.pdf" download="PDF_FILE.pdf">Download PDF</a>
     </div>
     <div class="card">
-        <iframe src="UNIT 1 IMP.pdf#view=FitH"></iframe>
+        <iframe src="Unit 2 Read Data from Various Sources.pdf#view=FitH"></iframe>
     </div>
     <div class="button-container">
-        <a href="UNIT 1 IMP.pdf" target="_blank">View Full Screen</a>
-        <a href="UNIT 1 IMP.pdf" download="PDF_FILE.pdf">Download PDF</a>
+        <a href="Unit 2 Read Data from Various Sources.pdf" target="_blank">View Full Screen</a>
+        <a href="Unit 2 Read Data from Various Sources.pdf" download="PDF_FILE.pdf">Download PDF</a>
+    </div>
+    <div class="card">
+        <iframe src="UNIT 2 IMP.pdf#view=FitH"></iframe>
+    </div>
+    <div class="button-container">
+        <a href="UNIT 2 IMP.pdf" target="_blank">View Full Screen</a>
+        <a href="UNIT 2 IMP.pdf" download="PDF_FILE.pdf">Download PDF</a>
     </div>
 </body>
 </html>
